  processing.

* The `automodule` directive now supports the ``synopsis``,
  ``deprecated`` and ``platform`` options.

* The HTML builders have two additional attributes now that can be
  used to disable the anchor-link creation after headlines and
  definition links.

* sphinx.doc.autodoc has a new event ``autodoc-process-signature``
  that allows tuning function signature introspection.

* Glossary entries are now automatically added to the index.

* Added ``exclude_dirnames`` config value that can be used to exclude
  e.g. CVS directories from source file search.

* ``Sphinx.add_node()`` now takes optional visitor methods for the
  HTML, LaTeX and text translators; this prevents having to manually
  patch the classes.

* Added ``Sphinx.add_javascript()`` that adds scripts to load in the
  default HTML template.

* Added new events: ``env-updated``, ``missing-reference``,
  ``build-finished``.


Release 0.4.2 (Jul 29, 2008)
============================

* Fix rendering of the ``samp`` role in HTML.

* Fix a bug with LaTeX links to headings leading to a wrong page.

* Reread documents with globbed toctrees when source files are
  added or removed.

* Add a missing parameter to PickleHTMLBuilder.handle_page().

* Put inheritance info always on its own line.

* Don't automatically enclose code with whitespace in it in quotes;
  only do this for the ``samp`` role.

* autodoc now emits a more precise error message when a module
  can't be imported or an attribute can't be found.

* The JavaScript search now uses the correct file name suffix when
  referring to found items.

* The automodule directive now accepts the ``inherited-members``
  and ``show-inheritance`` options again.

* You can now rebuild the docs normally after relocating the source
  and/or doctree directory.


Release 0.4.1 (Jul 5, 2008)
===========================

* Added sub-/superscript node handling to TextBuilder.

* Label names in references are now case-insensitive, since reST